# golld

./: .gitignore  pyproject.toml  train.py
experiments/: optimization.py  trainer.py  trainer_example.py  trainer_glide.py  trainer_latent.py  trial.py
